- scheduled delete unused media files (currently monthly day 25, 03:00h) - import  - removed prepared import sub forms  - separated import datatable based on mediaItem dt  - added navigations  - added configs - Datatable filters - changed message-box declaration strategy - message-box buttons blades - moved pusher/channels stuff to website-base module - upgrades for compatibility to php 8.3 - formatted code

--- a/lang/de.json
+++ b/lang/de.json
@@ -61,6 +61,7 @@
   "Ignored if a template was selected.": "Wird ignoriert wenn eine Vorlage ausgewählt wurde.",
   "Image": "Bild",
   "Images": "Bilder",
+  "Import": "Importieren",
   "Invalid Search Input.": "Ungültige Suchanfrage. Bitte gib mehr als 2 zeichen ein.",
   "Item": "Artikel",
   "Item Information": "Informationen zu diesem Artikel",
@@ -135,6 +136,7 @@
   "Trader Wait List": "Händler-Warteliste",
   "Trading": "Handeln",
   "Unlocked": "Freigegeben",
+  "Upload": "Hochladen",
   "Use Telegram": "Telegram benutzen",
   "User": "Benutzer",
   "User Groups": "Benutzergruppen",
@@ -168,6 +170,8 @@
   "data-table.user": "Benutzerliste",
   "forgot_password_description": "Du hast dein Passwort vergessen? Kein Problem. Gib deine Email ein und wir senden dir einen speziellen Link zum direkten Login in dein Konto. Du kannst daraufhin dein Passwort neu anpassen.",
   "give away": "zu verschenken",
+  "import_description": "Importiert eine größere Anzahl an Bildern order Produkten auf einmal. Das starten des Imports erfordert eine separate Aktion durch klicken auf 'Import starten'. Lies auch unsere Hilfe-Seite um weitere Information, wie zum Beispiel das Dateiformat, zu erhalten.",
+  "launch_import_description": "Startet den Import-Prozess. Dieser Prozess wird im Hintergrund ausgeführt und kann je nach Auslastung sofort oder zum späteren Zeitpunkt ausgeführt werden. Du wirst nach dem Fertigstellen des Importvorgangs auf deinen präferierten Kanal informiert.",
   "leave_password_blank": "Beide Passwort-Felder freilassen, um das Passwort nicht zu ändern.",
   "maybe_email_sent": "Email wird versandt, sofern uns die eingegebene Adresse bekannt ist.",
   "notification_event_user_list_description": "Die konfigurierten Benutzer und Gruppen sind für die meisten Event-Codes nicht relevant und werden überschrieben, weil sie automatisch berechnet werden. Für den manuellen Prozess jedoch werden sie benötigt.",
