- added core_config fields options - added module.deploy-envs - forms: using getHtmlSelectOptionNoValue() - changed to preferred quote `'` instead of `"` - declared missing types - cleaned up code - module description

--- a/lang/de.json
+++ b/lang/de.json
@@ -19,6 +19,7 @@
   "Contact": "Kontakt",
   "Content": "Inhalt",
   "Content of your concern": "Inhalt deines Anliegens",
+  "Core Config": "Kern-Konfiguration",
   "Country": "Land",
   "Create %s": "%s erstellen",
   "Created / Updated": "Erstellt / Aktualisiert",
@@ -81,7 +82,7 @@
   "New": "Neu",
   "No": "Nein",
   "No Image": "Kein Bild",
-  "No choice": "[Keine Auswahl]",
+  "No choice": "Keine Auswahl ...",
   "No entries found.": "Keine Einträge gefunden.",
   "Not in use.": "Wird nicht benutzt.",
   "Not logged in": "Nicht eingeloggt",
@@ -216,8 +217,9 @@
   "shipping_method_private": "Privat",
   "shipping_method_self_collect": "Selbstabholer",
   "shipping_method_ups": "UPS",
-  "title.admin-panel.settings": "Einstellungen",
-  "title.admin-panel.start": "Admin Panel Start",
+  "title.admin-panel.modules": "Admin - Module",
+  "title.admin-panel.settings": "Admin - Einstellungen",
+  "title.admin-panel.start": "Admin - Start",
   "user_deleted_step_1": "Benutzer ':name' ist nun ungültig und wird demnächst automatisch entfernt.",
   "user_deleted_step_2": "Benutzer ':name' wurde zum Entfernen markiert.",
   "user_deleted_step_3": "Benutzer ':name' wurde unwiderruflich gelöscht.",
