--- a/lang/en.json
+++ b/lang/en.json
@@ -18,6 +18,7 @@
     "Contact": "Contact",
     "Content": "Content",
     "Content of your concern": "Content of your concern",
+    "Core Config": "Core Config",
     "Country": "Country",
     "Create %s": "Create %s",
     "Created / Updated": "Created / Updated",
@@ -81,7 +82,7 @@
     "New": "New",
     "No": "No",
     "No Image": "No Image",
-    "No choice": "[No choice]",
+    "No choice": "No choice ...",
     "No entries found.": "No entries found.",
     "Not in use.": "Not in use.",
     "Not logged in": "Not logged in",
@@ -217,8 +218,9 @@
     "shipping_method_private": "Private",
     "shipping_method_self_collect": "Self Collect",
     "shipping_method_ups": "UPS",
-    "title.admin-panel.settings": "Settings",
-    "title.admin-panel.start": "Admin Panel Start",
+    "title.admin-panel.modules": "Admin - Modules",
+    "title.admin-panel.settings": "Admin - Settings",
+    "title.admin-panel.start": "Admin - Start",
     "user_deleted_step_1": "User ':name' is now invalid and will be automatically deleted soon.",
     "user_deleted_step_2": "User ':name' was marked as deleted.",
     "user_deleted_step_3": "User ':name' was deleted irrevocable.",
