- Config refactored get() to getValue() - resolved form tab extra_attributes dot issue - notifications  - moved from one PreferredNotificationChannel to multiple PreferredNotificationChannels  - sender is a user (puppet) now, no longer send from env.MAIL_FROM_ADDRESS - removed telegram-api dependencies from website-base - Classes and events for channels to make injectable by modules - fixed user rating form issues - low level assigment extraAttributes values and type casting

--- a/lang/en.json
+++ b/lang/en.json
@@ -26,6 +26,7 @@
     "Creator": "Creator",
     "Creator '%s'": "Creator '%s'",
     "Currency": "Currency",
+    "Currently not in use.": "Currently not in use.",
     "Delete": "Delete",
     "Delete Event": "Delete Event",
     "Delete Group": "Delete Group",
@@ -84,7 +85,6 @@
     "No Image": "No Image",
     "No choice": "No choice ...",
     "No entries found.": "No entries found.",
-    "Not in use.": "Not in use.",
     "Not logged in": "Not logged in",
     "Notification Channel": "Notification Channel",
     "Notification Channel Description": "Notification Channel like email or telegram or something like that.",
@@ -129,7 +129,6 @@
     "Subject": "Subject",
     "Suspend": "Suspend ...",
     "Tel": "Phone",
-    "Telegram ID": "Telegram ID",
     "This password reset link will expire in :count minutes.": "This password reset link will expire in :count minutes.",
     "Time Limited": "Time Limited",
     "Total": "Total",
@@ -138,7 +137,6 @@
     "Trading": "Trading",
     "Unlocked": "Unlocked",
     "Upload": "Upload",
-    "Use Telegram": "Use Telegram",
     "User": "User",
     "User Groups": "User Groups",
     "User Profile": "User Profile",
@@ -192,7 +190,6 @@
     "payment_method_description_negotiable": "The payment must be reconciled.",
     "payment_method_description_prepayment": "Prepayment",
     "payment_method_description_purchase_on_invoice": "Purchase on Invoice",
-    "payment_method_description_telegram": "Telegram",
     "payment_method_electronic_bank_transfer": "Electronic Bank Transfer",
     "payment_method_exchange_of_goods": "Exchange of Goods",
     "payment_method_free": "Free",
@@ -200,7 +197,6 @@
     "payment_method_negotiable": "Negotiable",
     "payment_method_prepayment": "Prepayment",
     "payment_method_purchase_on_invoice": "Purchase on Invoice",
-    "payment_method_telegram": "Telegram",
     "register_info": "You can register here but you will be activated manually. While no activated, you will not see relevant content.",
     "shipping_method_description_dhl": "Extern Shipment Provider DHL",
     "shipping_method_description_digital": "Digital (Email,Download,...)",
