--- a/lang/en.json
+++ b/lang/en.json
@@ -174,6 +174,8 @@
     "launch_import_description": "Starts the import process. This process is executed in the background and can be executed immediately or at a later time depending on the workload. You will be notified on your preferred channel once the import process has been completed.",
     "leave_password_blank": "Leave both password fields blank to not change them.",
     "maybe_email_sent": "Email will sent if the entered address is known.",
+    "media_item_media_upload_description": "The previous image will be replaced and is lost after the upload is finished. Uploaded Images will be assigned immediately after a successfully upload. Its not required to save this item for changing images.",
+    "media_user_upload_description": "The uploaded image will be created as a new one and will be used as avatar. The previous image will not be replaced and is still part of the user after the upload is finished. Uploaded Images will be assigned immediately after a successfully upload. Its not required to save this item for changing images.",
     "notification_event_user_list_description": "The configured users and groups are not relevant and will be overwritten in most event codes, because they will calculated automatically. But for manually launch users and/or acl groups are needed.",
     "payment_method_bank_transfer": "Bank Transfer",
     "payment_method_cash": "Cash",
