- fixed and reviewed offer blades - form frontendKey to const - added offer filters - fixed offer mismatch id/shared_id

--- a/lang/de.json
+++ b/lang/de.json
@@ -140,6 +140,7 @@
     "User": "Benutzer",
     "User Groups": "Benutzergruppen",
     "User Profile": "Benutzerprofil",
+    "User Profiles": "Benutzerprofile",
     "User Register Hint": "Hinweis des Benutzers",
     "User was deleted.": "Benutzer wurde entfernt.",
     "UserProfile": "Benutzerprofil",
