--- a/lang/en.json
+++ b/lang/en.json
@@ -140,6 +140,7 @@
     "User": "User",
     "User Groups": "User Groups",
     "User Profile": "User Profile",
+    "User Profiles": "User Profiles",
     "User Register Hint": "User hint",
     "User was deleted.": "User was deleted.",
     "UserProfile": "User Profile",
