- fixed form issues for cmsPage and cmsContent

--- a/lang/de.json
+++ b/lang/de.json
@@ -6,7 +6,9 @@
     "Actions": "Aktionen",
     "Add": "Hinzufügen",
     "Add to Cart": "In den Warenkorb",
+    "Address": "Adresse",
     "Addressed to": "Gerichtet an",
+    "Addresses": "Adressen",
     "All Channels": "Alle Kanäle",
     "Already registered?": "Du bist bereits registriert?",
     "Change %s: %s": "%s ändern: %s",
@@ -124,6 +126,7 @@
     "Send Request": "Anfrage senden",
     "Settings": "Einstellungen",
     "Shipping Method": "Versandmethode",
+    "Show :name": ":name anzeigen",
     "Source": "Quelle",
     "Started At": "Beginnt am",
     "Store": "Lager",
