--- a/lang/en.json
+++ b/lang/en.json
@@ -5,7 +5,9 @@
     "Access denied": "Access denied",
     "Actions": "Actions",
     "Add": "Add",
+    "Address": "Address",
     "Addressed to": "Addressed to",
+    "Addresses": "Addresses",
     "All Channels": "All Channels",
     "Already registered?": "Already registered?",
     "Change %s: %s": "Change %s: %s",
@@ -124,6 +126,7 @@
     "Send Request": "Send Request",
     "Settings": "Settings",
     "Shipping Method": "Shipping Method",
+    "Show :name": "Show :name",
     "Source": "Source",
     "Started At": "Started At",
     "Store": "Store",
