- prepared for laravel scout - adjusted several sub datatables - fixed search results for standalone site (w/o post)

--- a/lang/de.json
+++ b/lang/de.json
@@ -10,6 +10,7 @@
     "Addressed to": "Gerichtet an",
     "Addresses": "Adressen",
     "All Channels": "Alle Kanäle",
+    "All acl resources found for all groups by this user.": "Alle Berechtigungen aller Gruppen des Benutzers.",
     "Already registered?": "Du bist bereits registriert?",
     "Change %s: %s": "%s ändern: %s",
     "Changelog": "Letzte Änderungen",
@@ -156,6 +157,8 @@
     "Welcome as trader.": "Willkommen als Händler.",
     "Welcome in :name": "Willkommen in :name!",
     "Whoops!": "Was zum ... ?!",
+    "With Images": "Mit Bildern",
+    "Without Images": "Ohne Bilder",
     "Yes": "Ja",
     "You are receiving this email because we received a password reset request for your account.": "Du erhältst diese Email, weil bei uns eine Anfrage der Passwort-Wiederherstellung für dein Konto eingegangen ist.",
     "You can upload your image or media file here once you created the media item successfully.": "Du kannst hier dein Bild hochladen sobald du dieses Media-Objekt einmal erfolgreich gespeichert hast.",
