--- a/lang/en.json
+++ b/lang/en.json
@@ -9,6 +9,7 @@
     "Addressed to": "Addressed to",
     "Addresses": "Addresses",
     "All Channels": "All Channels",
+    "All acl resources found for all groups by this user.": "All acl resources found for all groups by this user.",
     "Already registered?": "Already registered?",
     "Change %s: %s": "Change %s: %s",
     "Changelog": "Changelog",
@@ -156,6 +157,8 @@
     "Welcome as trader.": "Welcome as trader.",
     "Welcome in :name": "Welcome in :name",
     "Whoops!": "Whoops!",
+    "With Images": "With Images",
+    "Without Images": "Without Images",
     "Yes": "Yes",
     "You are receiving this email because we received a password reset request for your account.": "You are receiving this email because we received a password reset request for your account.",
     "You can upload your image or media file here once you created the media item successfully.": "You can upload your image or media file here once you created the media item successfully.",
