- form review  - removed all form classes in "/Forms" and merged them with livewire form class - added $buttonType for form actions - default register will set default channel to email - cancel-account button for UserProfile - UserProfile and User DataTable permission checks for delete/cancel-account

--- a/lang/de.json
+++ b/lang/de.json
@@ -12,6 +12,7 @@
     "All Channels": "Alle Kanäle",
     "All acl resources found for all groups by this user.": "Alle Berechtigungen aller Gruppen des Benutzers.",
     "Already registered?": "Du bist bereits registriert?",
+    "Cancel Account": "Account kündigen",
     "Change %s: %s": "%s ändern: %s",
     "Changelog": "Letzte Änderungen",
     "City": "Stadt",
@@ -163,6 +164,7 @@
     "You are receiving this email because we received a password reset request for your account.": "Du erhältst diese Email, weil bei uns eine Anfrage der Passwort-Wiederherstellung für dein Konto eingegangen ist.",
     "You can upload your image or media file here once you created the media item successfully.": "Du kannst hier dein Bild hochladen sobald du dieses Media-Objekt einmal erfolgreich gespeichert hast.",
     "Zip": "PLZ",
+    "ask_cancel_account": "Willst du wirklich diesen Account kündigen? Der Account wird für 14 Tage deaktiviert und dann unwiderruflich gelöscht.",
     "ask_claim_user": "Du übernimmst nun diesen Benutzer als Login. Ausloggen während dieser Übernahme kehrt zum ursprünglichen Benutzer zurück.",
     "ask_delete_acl_group": "Willst du wirklich diese Gruppe löschen?",
     "ask_delete_acl_resource": "Willst du wirklich diese Ressource löschen?",
