--- a/lang/en.json
+++ b/lang/en.json
@@ -11,6 +11,7 @@
     "All Channels": "All Channels",
     "All acl resources found for all groups by this user.": "All acl resources found for all groups by this user.",
     "Already registered?": "Already registered?",
+    "Cancel Account": "Cancel Account",
     "Change %s: %s": "Change %s: %s",
     "Changelog": "Changelog",
     "City": "City",
@@ -164,6 +165,7 @@
     "You can upload your image or media file here once you created the media item successfully.": "You can upload your image or media file here once you created the media item successfully.",
     "You registered successfully!": "You registered successfully!",
     "Zip": "Zip",
+    "ask_cancel_account": "Do you really want to delete this account? This account will be deactivated for 14 days and deleted irreversible after.",
     "ask_claim_user": "You will logged in as this user. Logging out while claiming will force you come back to the claimer.",
     "ask_delete_acl_group": "Do you really want to delete this group?",
     "ask_delete_acl_resource": "Do you really want to delete this resource?",
