- removed all target _blank (mainly for dusk) - added css classes (mainly for dusk) - replaced route() with getFrontendLink() if possible - added config dusk.php - fixed form title when read only to "show ..." - dusk tests

--- a/lang/de.json
+++ b/lang/de.json
@@ -128,6 +128,7 @@
     "Send Request": "Anfrage senden",
     "Settings": "Einstellungen",
     "Shipping Method": "Versandmethode",
+    "Show %s: %s": "%s anzeigen: %s",
     "Show :name": ":name anzeigen",
     "Source": "Quelle",
     "Started At": "Beginnt am",
