--- a/lang/en.json
+++ b/lang/en.json
@@ -128,6 +128,7 @@
     "Send Request": "Send Request",
     "Settings": "Settings",
     "Shipping Method": "Shipping Method",
+    "Show %s: %s": "Show %s: %s",
     "Show :name": "Show :name",
     "Source": "Source",
     "Started At": "Started At",
